feat: add server implementation and refactor package structure
- Add `Server` class with multithreaded handling for client connections.
- Introduce `ConnectionHandler` for managing individual client communication.
- Refactor package structure; move UI-related classes to `se.mau.chifferchat.ui`.
- Update `module-info.java` and FXML files to reflect package changes.

--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>se.mau.chifferchat/se.mau.chifferchat.HelloApplication</mainClass>
+                            <mainClass>se.mau.chifferchat/se.mau.chifferchat.ui.HelloApplication</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
